# majiang-ai

./: .gitignore  6.24.md  CHANGELOG.md  README.md  README_V2.md  analyze_now.py  assistant.py  auto_recognize.py  build_final.py  calibrate.py  calibration_config.json  capture_single.py  capture_templates.py  check_templates.py  chinese_input.py  config.example.py  diagnose_match.py  gen_tuner_html.py  hd_screenshot_helper.py  list_cameras.py  main.py  majiang_gui.py  manual_cut.py  match_engine.py  personality_library.py  pyproject.toml  requirements.txt  screenshot_helper.py  self_play.py  simple_auto.py  simple_capture.py  simple_play.py  start_virtual_cam_test.py  super_easy_capture.py  test_camera_1.py  test_camera_idx.py  test_core.py  test_ui_analysis.py
docs/: API.md  CONFIG.md  OBS_SETUP.md  QUICKSTART.md  README.md  TRAIN_YOLO.md  TROUBLESHOOTING.md
src/majiang_ai/: __init__.py  capture.py  cli.py  dynamic_ui.py  enhanced_evaluator.py  evaluator.py  mcts.py  models.py  overlay.py  parser.py  simulator.py  virtual_camera.py  vision.py  yolo_detector.py
